@@ -1,6 +1,6 @@
 package com.woytuloo.ScrimMaster.Repositories;
 
-import com.woytuloo.ScrimMaster.Models.Team;
+import com.woytuloo.ScrimMaster.Models.PlayerStats;
 import com.woytuloo.ScrimMaster.Models.User;
 import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,19 +12,16 @@ import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.transaction.annotation.Transactional;
 import org.testcontainers.containers.PostgreSQLContainer;
 
-import java.util.List;
-import java.util.Optional;
-
 import static org.assertj.core.api.Assertions.assertThat;
 
 @Transactional
 @ActiveProfiles("test")
 @DataJpaTest
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
-class TeamRepositoryTest {
+class PlayerStatsRepositoryTest {
 
     @Autowired
-    private TeamRepository teamRepository;
+    private PlayerStatsRepository playerStatsRepository;
     @Autowired
     private UserRepository userRepository;
 
@@ -36,55 +33,37 @@ class TeamRepositoryTest {
         postgres.start();
     }
     @DynamicPropertySource
-    static void configureProps(DynamicPropertyRegistry reg) {
+    static void configure(DynamicPropertyRegistry reg) {
         reg.add("spring.datasource.url", postgres::getJdbcUrl);
         reg.add("spring.datasource.username", postgres::getUsername);
         reg.add("spring.datasource.password", postgres::getPassword);
     }
 
-    private User captain;
-    private User player;
+    private User user;
 
     @BeforeEach
     void setUp() {
-        captain = new User("cpt", "123", "cpt@cpt.pl");
-        player = new User("gracz", "pwd", "gracz@xd.pl");
-        userRepository.saveAll(List.of(captain, player));
-
-        Team team = new Team("TeamX", captain);
-        team.getPlayers().add(player);
-        team.setTeamRanking(1234);
-        teamRepository.save(team);
+        user = new User("kappa", "passwd", "kappa@kappa.com");
+        userRepository.save(user);
+        PlayerStats stats = new PlayerStats();
+        stats.setPlayer(user);
+        stats.setTeamSide(1);
+        stats.setKd(1.1);
+        stats.setAdr(22.2);
+        playerStatsRepository.save(stats);
     }
 
     @AfterEach
     void tearDown() {
-        teamRepository.deleteAll();
+        playerStatsRepository.deleteAll();
         userRepository.deleteAll();
     }
 
     @Test
-    void findByTeamName_exists() {
-        Optional<Team> team = teamRepository.findByTeamName("TeamX");
-        assertThat(team).isPresent();
-        assertThat(team.get().getCaptain().getUsername()).isEqualTo("cpt");
-    }
-
-    @Test
-    void findByTeamName_notExists() {
-        assertThat(teamRepository.findByTeamName("Nope")).isNotPresent();
-    }
-
-    @Test
-    void findAllByCaptain_Username() {
-        List<Team> teams = teamRepository.findAllByCaptain_Username("cpt");
-        assertThat(teams).hasSize(1);
-    }
-
-    @Test
-    void findAllByPlayers_Username() {
-        List<Team> teams = teamRepository.findAllByPlayers_Username("gracz");
-        assertThat(teams).hasSize(1);
-        assertThat(teams.getFirst().getTeamName()).isEqualTo("TeamX");
+    void saveAndFind() {
+        assertThat(playerStatsRepository.findAll()).hasSize(1);
+        PlayerStats stats = playerStatsRepository.findAll().get(0);
+        assertThat(stats.getPlayer().getUsername()).isEqualTo("kappa");
+        assertThat(stats.getKd()).isEqualTo(1.1);
     }
 }
